--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -140,6 +140,12 @@
             <version>9.2.0</version>
         </dependency>
 
+		<!-- Thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>io.projectreactor</groupId>
