email notification updated

--- a/template/src/main/resources/application.properties
+++ b/template/src/main/resources/application.properties
@@ -17,9 +17,7 @@ management.endpoints.web.exposure.include=health,info,metrics,prometheus,httptra
 management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
-management.endpoint.prometheus.enabled=true
 management.endpoint.httptrace.enabled=true
-management.metrics.enable.all=true
 management.metrics.binders.system=true
 management.metrics.binders.jvm=true
 management.metrics.binders.http=true
@@ -45,3 +43,5 @@ management.metrics.enable.all=true
 management.endpoint.prometheus.enabled=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.metrics.tags.application=whatsapp-template-service
+
+apiVersion: v23.0
