--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 eureka:
   client:
+    enabled: false
     service-url:
       defaultZone: http://localhost:8888/eureka/  # Your Eureka server URL
     register-with-eureka: true
