--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -30,7 +30,6 @@
 		<java.version>21</java.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<springdoc.version>2.3.0</springdoc.version>
-		<bucket4j.version>8.1.0</bucket4j.version>
 	</properties>
 	<dependencies>
 		<!-- Common Core -->
@@ -54,7 +53,7 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<!-- Redis for Caching -->
+		<!-- Redis for Caching and Rate Limiting -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
@@ -101,13 +100,6 @@
 			<version>3.1.6</version>
 		</dependency>
 
-		<!-- Rate Limiting -->
-		<dependency>
-			<groupId>com.bucket4j</groupId>
-			<artifactId>bucket4j-core</artifactId>
-			<version>${bucket4j.version}</version>
-		</dependency>
-
 		<!-- Database -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -150,6 +142,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<!-- Metrics -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 
 		<!-- Testing -->
