--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -126,6 +126,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+           <groupId>io.vavr</groupId>
+           <artifactId>vavr</artifactId>
+           <version>0.10.4</version>
+        </dependency>
+
 		
 		<!-- Notification Providers -->
 		 <dependency>
