--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -20,7 +20,7 @@ server:
 # ============================================
 async:
   email:
-    enabled: ${ASYNC_EMAIL_ENABLED:true}
+    enabled: ${ASYNC_EMAIL_ENABLED:false}
     core-pool-size: ${ASYNC_EMAIL_CORE_POOL_SIZE:5}
     max-pool-size: ${ASYNC_EMAIL_MAX_POOL_SIZE:10}
     queue-capacity: ${ASYNC_EMAIL_QUEUE_CAPACITY:100}
@@ -29,7 +29,7 @@ async:
     await-termination-seconds: ${ASYNC_EMAIL_AWAIT_TERMINATION:60}
 
   push:
-    enabled: ${ASYNC_PUSH_ENABLED:true}
+    enabled: ${ASYNC_PUSH_ENABLED:false}
     core-pool-size: ${ASYNC_PUSH_CORE_POOL_SIZE:5}
     max-pool-size: ${ASYNC_PUSH_MAX_POOL_SIZE:10}
     queue-capacity: ${ASYNC_PUSH_QUEUE_CAPACITY:100}
@@ -41,7 +41,7 @@ async:
 # ============================================
 batch:
   notification:
-    enabled: ${BATCH_WRITER_ENABLED:true}
+    enabled: ${BATCH_WRITER_ENABLED:false}
     batch-size: ${BATCH_WRITER_SIZE:50}
     queue-capacity: ${BATCH_WRITER_QUEUE:1000}
     flush-interval-ms: ${BATCH_WRITER_FLUSH:1000}
@@ -51,7 +51,7 @@ batch:
 # ============================================
 outbox:
   publisher:
-    enabled: ${OUTBOX_PUBLISHER_ENABLED:true}
+    enabled: ${OUTBOX_PUBLISHER_ENABLED:false}
     poll-interval-ms: ${OUTBOX_POLL_INTERVAL:5000}
     batch-size: ${OUTBOX_BATCH_SIZE:100}
 
