--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -46,5 +46,22 @@ batch:
     flush-interval-ms: ${BATCH_WRITER_FLUSH:1000}
 
 
+# ============================================
+# RATE LIMITING FOR INTERNAL SERVICES
+# ============================================
+ratelimit:
+  enabled: true
+  
+  # Global system protection (CRITICAL)
+  global:
+    requests-per-minute: 1000    # Total system capacity
+    burst-capacity: 1500
+  
+  # Per-service protection
+  per-service:
+    enabled: true
+    requests-per-minute: 200     # Max per internal service
+    burst-capacity: 300
+  
 
 
