--- a/notification/src/main/resources/application-notification-provider.yml
+++ b/notification/src/main/resources/application-notification-provider.yml
@@ -3,8 +3,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME:jahanvinwork@gmail.com}
-    password: ${MAIL_PASSWORD:kjjx rihw gllb nalb}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
