--- a/shared/src/main/resources/application.properties
+++ b/shared/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=shared
 
 server.port = 8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/services
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
