--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -147,6 +147,16 @@
 			<artifactId>web-push</artifactId>
 			<version>5.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.70</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bitbucket.b_c</groupId>
+			<artifactId>jose4j</artifactId>
+			<version>0.9.3</version>
+		</dependency>
 
 		<!-- Thymeleaf -->
 		<dependency>
